# LosszeroDEMO

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN-phase1.md  DESIGN-phase2.md  DESIGN-phase3.md  DESIGN.md  HANDOFF.md  README.md  ROADMAP.md  SPEC.md  case-test 1.md  case-test 2.md  debugHotfixerSnapshot.md  docker-compose.yml  error-case.md  supervisorSnapshot.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/agent/: __init__.py  events.py  history.py  loop.py
backend/db/: __init__.py  connection.py
backend/domains/: __init__.py  domain_registry.json  domain_tables.json  loader.py  parser.py  sp_whitelist.json
backend/llm/: __init__.py  base.py  claude.py  lm_studio.py
backend/microskills/: __init__.py  _helpers.py  base.py  detector.py  registry.py
backend/microskills/attendance_gantt/: __init__.py  skill.py  sp_attendance_by_date.sql
backend/microskills/customer_as_pattern/: __init__.py  skill.py  sp_customer_as_pattern.sql
backend/microskills/task_diary_report/: __init__.py  skill.py  sp_task_diary_summary.sql
backend/prompts/: loader.py  system_base.md
backend/prompts/rules/: error-recovery.md  json-output.md  korean-sql.md  report-block-types.md  result-size.md
backend/schema_registry/domains/: groupware.json
backend/storage/: __init__.py  reports.py
backend/tools/: __init__.py  base.py  db_query.py  domain_lookup.py  explore_schema.py  list_tables.py  sp_call.py
backend/tools/build_report/: SKILL.md  __init__.py  description.md  schema.py  system.md  tool.py
backend/tools/build_schema/: SKILL.md  __init__.py  (+3 more)
(+130 files in other folders)
